[project]
name = "fr3s-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "franky-control>=1.1.3",
    "pylibfranka>=0.21.2",
    "rich-click>=1.9.7",
]


[project.optional-dependencies]
dev = [
  "sphinx",
  "toml",
  "ruff",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
robot = 'fr3s_utils.cli:cli'
joint_position_example = 'fr3s_utils.joint_position_example:main'
go_to_home = 'fr3s_utils.go_to_home:main'
go_to_home2 = 'fr3s_utils.go_to_home2:main'
print_robot_state = 'fr3s_utils.print_robot_state:main'